<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ExercicioSeisActivity">

    <EditText
        android:id="@+id/editTextFruta"
        android:layout_width="414dp"
        android:layout_height="88dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="2dp"
        android:layout_marginLeft="2dp"
        android:layout_marginTop="169dp"
        android:layout_marginRight="-3dp"
        android:hint="@string/fruit" />

    <Button
        android:id="@+id/buttonAdicionar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextFruta"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="149dp"
        android:layout_marginRight="149dp"
        android:text="@string/add" />

    <Button
        android:id="@+id/bt_volt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewLista"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="149dp"
        android:layout_marginRight="149dp"
        android:text="@string/btn_return" />

    <TextView
        android:id="@+id/textViewLista"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/buttonAdicionar"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="-4dp"
        android:layout_marginRight="-4dp" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="627dp"
        android:text="Escreva um programa que lê o nome de 5 frutas e armazena num carrinho de compras. Ao final da entrada dos 5 itens, exiba a lista completa."
        android:textSize="16sp"
        android:textStyle="bold|italic" />

</RelativeLayout>
